<resources>
    <string name="app_name">Traps Monitor</string>
    <string name="first_page_title">Configuration TRAPS Moniteur V1.6.2.5</string>
    <string name="server_host_label">Adresse du broker MQTT</string>
    <string name="server_host_hint">ex: tcp://mqtt.example.com</string>
    <string name="server_port_label">Port</string>
    <string name="server_port_hint">ex: 1883</string>
    <string name="device_name_label">Nom du TRAPS</string>
    <string name="device_name_hint">Nom du périphérique</string>
    <string name="toogle_notif_sound_text">Activer le son des notifications</string>
    <string name="toogle_send_stats_text">Activer l\'envoi des statistiques</string>
    <string name="connect_btn_text">Connecter</string>
    <string name="disconnect_btn_text">Déconnecter</string>
    <string name="test_notif_btn_text">Test</string>
    <string name="save_btn_text">Enregistrer</string>
    <string name="btn_modify">Modifier</string>
    <string name="btn_save">Enregistrer</string>
    <string name="btn_connect">Connecter</string>
    <string name="btn_disconnect">Déconnecter</string>
    <string name="preferences_saved">Préférences enregistrées</string>
    <string name="btn_test">Test</string>
    <string name="btn_close">Fermer</string>
</resources>