<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#BEDFFF"
    android:orientation="vertical"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bordered_background"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="visible">

            <TextView

                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/first_page_title"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_host_label" />

            <EditText
                android:id="@+id/serverHost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/server_host_hint"
                android:imeOptions="actionNext"
                android:singleLine="true" />

            <TextView
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:text="@string/server_port_label" />

            <EditText
                android:id="@+id/serverPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:hint="@string/server_port_hint"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:singleLine="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_name_label" />

            <EditText
                android:id="@+id/deviceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:hint="@string/device_name_hint"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:singleLine="true"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/toogleNotifSound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toogle_notif_sound_text" />

            <!-- Bouton Enregistrer seul sur une ligne -->
            <Button
                android:id="@+id/saveButton"
                style="@style/Widget.App.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/save_btn_text" />

            <!-- LinearLayout pour les boutons Connecter, Déconnecter, et Test sur une même ligne -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/connectButton"
                    style="@style/Widget.App.Button.Connect"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/connect_btn_text"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/disconnectButton"
                    style="@style/Widget.App.Button.Deconnect"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/disconnect_btn_text" />

                <Button
                    android:id="@+id/testNotifButton"
                    style="@style/Widget.App.Button.Test"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/test_notif_btn_text" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
